--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="row mb-0 mb-md-5" style="margin-top: 70px;">
       <p class="text-center">
 
-        <button class="btn btn-primary text-center" type="button">More gyan vihar News</button>
+        <burtton class="btn btn-primary text-center" type="button">More gyan vihar News</burtton>
       </p>
     </div>
   </div>
