Image card added

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <!-- Gyan-vihar-today -->
 
-  <div class="Gyan-vihar-today">
+  <div class="Gyan-vihar-today" style="background-color: rgba(249, 246, 239,1); ">
     <div class="container py-md-5 py-4">
       <h1 class="text-center section-heading"
         style="font-weight: 700;color: #254aa5;font-family: Source Sans Pro,sans-serif; font-weight: 900;">Gyan Vihar
@@ -184,9 +184,80 @@
     <div class="row mb-0 mb-md-5" style="margin-top: 70px;">
       <p class="text-center">
 
-        <burtton class="btn btn-primary text-center" type="button">More gyan vihar News</burtton>
+        <burtton class="btn btn-primary text-center" type="button"
+          style="margin: 0px 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More gyan vihar
+          News</burtton>
       </p>
     </div>
+  </div>
+
+
+  <!-- Programm div starts here -->
+
+  <div class="prospectus container">
+    <div class="container">
+      <h1 class="text-center section-heading"
+        style="color: #254AA5;font-family: Source Sans Pro,sans-serif; font-weight: 1000;">Programs
+      </h1>
+
+      <div class=" card-title">
+        <h5 class="text-center section-heading" style="font-family: Source Sans Pro,sans-serif; font-weight: 500;">
+          Excellence and virtue
+          delivered through a pedagogy prepared by subject experts and industry leaders
+        </h5>
+
+      </div>
+    </div>
+
+    <!-- Programs Images -->
+    <div class="container w-100" style="background-color: rgba(241, 241, 241,1);width: 100%;">
+
+      <div class="row-cols-4 d-inline-flex" style="padding-top: 3.5rem;">
+        <div class="card w-25">
+          <img src="https://www.gyanvihar.org:3001/uploads/1661167260810nirf01.jpg" class="card-img-top"
+            alt="gyan-vihar-nirf-university-once-again">
+          <div class="card-body">
+            <h5 class="card-title">gyan-vihar-nirf-university-once-again</h5>
+            <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://www.gyanvihar.org:3001/uploads/1661167260810nirf01.jpg" class="card-img-top"
+            alt="gyan-vihar-nirf-university-once-again">
+          <div class="card-body">
+            <h5 class="card-title">gyan-vihar-nirf-university-once-again</h5>
+            <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://www.gyanvihar.org:3001/uploads/1661167260810nirf01.jpg" class="card-img-top"
+            alt="gyan-vihar-nirf-university-once-again">
+          <div class="card-body">
+            <h5 class="card-title">gyan-vihar-nirf-university-once-again</h5>
+            <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://www.gyanvihar.org:3001/uploads/1661167260810nirf01.jpg" class="card-img-top"
+            alt="gyan-vihar-nirf-university-once-again">
+          <div class="card-body">
+            <h5 class="card-title">gyan-vihar-nirf-university-once-again</h5>
+            <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
+          </div>
+        </div>
+      </div>
+      <div class="row mb-0 mb-md-5" style="margin-top: 70px;">
+        <p class="text-center">
+
+          <burtton class="btn btn-primary text-center" type="button"
+            style="margin: 0px 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More About
+            Academics</burtton>
+        </p>
+      </div>
+    </div>
+
+
+
   </div>
 
   <!-- jquery cdn -->
