About gyan vihar added

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
   <!-- Programm div starts here -->
 
-  <div class="prospectus container">
+  <div class="prospectus" style="background-color: rgba(241, 241, 241,1);width: auto;">
     <div class="container">
       <h1 class="text-center section-heading"
         style="color: #254AA5;font-family: Source Sans Pro,sans-serif; font-weight: 1000;">Programs
@@ -210,7 +210,7 @@
     </div>
 
     <!-- Programs Images -->
-    <div class="container w-100" style="background-color: rgba(241, 241, 241,1);width: 100%;">
+    <div class="container w-100">
 
       <div class="row-cols-4 d-inline-flex" style="padding-top: 3.5rem;">
         <div class="card w-25">
@@ -257,7 +257,55 @@
     </div>
 
 
+    <!-- Why gyan vihar -->
 
+    <div class="why-gyan-vihar container-fluid " style="background-color: rgb(254, 254, 254);">
+      <div class="container">
+        <h1 class="text-center section-heading"
+          style="color: #254AA5;font-family: Source Sans Pro,sans-serif; font-weight: 1000;">why Gyan Vihar?</h1>
+      </div>
+      <!-- FEATURES CARDS -->
+      <div class=" container-fluid d-inline-flex mt-lg-3 text-center">
+
+        <div class="container card"
+          style="width: 20rem;border: none;box-shadow: 10px 5px 10px 8px #DADADA;background: none;">
+          <img src="https://www.gyanvihar.org:3001/uploads/1609137971384o6.jpg" class="card-img" alt="..."
+            style="width: 100%;">
+          <div class="card-body">
+            <h6 class="card-text" style="font-size: 20px;font-weight: 700;">Diversified and global atmosphere</h6>
+            <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
+          </div>
+        </div>
+        <div class="container card "
+          style="width: 18rem;border: none;box-shadow: 10px 5px 10px 8px #DADADA;background: none;">
+          <img src="https://www.gyanvihar.org:3001/uploads/1609137484185o4.jpg" class="card-img-top" alt="..."
+            style="width:100% ;">
+          <div class="card-body">
+            <p class="card-text" style="font-size: 20px;font-weight: 500;">Holistic Growth</p>
+          </div>
+        </div>
+        <div class="container card "
+          style="width: 20rem;border: none;box-shadow: 10px 12px 10px 8px #DADADA; background: none;">
+          <img src="https://www.gyanvihar.org:3001/uploads/16091374495794.1.jpg" class="card-img-top" alt="..."
+            style="width:100% ;">
+          <div class="card-body">
+            <p class="card-title" style="font-size: 20px;font-weight: 500;">Industry Connect</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="events-section bg-white" style="color: #254AA5;">
+      <div class="container py-4 py-md-5">
+        <div class="text-center mb-4 mb-md-5 section-heading">
+          <h3 style="font-size: 2.5rem;">Don't Miss out</h3>
+          <h2 style="font-size: 3.5rem;">Upcoming Events</h2>
+        </div>
+        <div class="py-5 py-5-custom"></div>
+        <div class="timeline"></div>
+        <p class="text-center mt-5"><a class="btn btn-style" href="/events">View More</a></p>
+      </div>
+    </div>
   </div>
 
   <!-- jquery cdn -->
