About gyan vihar added

--- a/index.html
+++ b/index.html
@@ -265,31 +265,33 @@
           style="color: #254AA5;font-family: Source Sans Pro,sans-serif; font-weight: 1000;">why Gyan Vihar?</h1>
       </div>
       <!-- FEATURES CARDS -->
-      <div class=" container-fluid d-inline-flex mt-lg-3 text-center">
+      <div class="row text-center features" style="padding-bottom: 40px;">
 
         <div class="container card"
-          style="width: 20rem;border: none;box-shadow: 10px 5px 10px 8px #DADADA;background: none;">
+          style="width: 23rem;border: none;box-shadow: 10px 5px 10px 8px #DADADA;background: none;">
           <img src="https://www.gyanvihar.org:3001/uploads/1609137971384o6.jpg" class="card-img" alt="..."
-            style="width: 100%;">
+            style="width: 346px;height: 346px;">
           <div class="card-body">
             <h6 class="card-text" style="font-size: 20px;font-weight: 700;">Diversified and global atmosphere</h6>
             <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
           </div>
         </div>
-        <div class="container card "
-          style="width: 18rem;border: none;box-shadow: 10px 5px 10px 8px #DADADA;background: none;">
-          <img src="https://www.gyanvihar.org:3001/uploads/1609137484185o4.jpg" class="card-img-top" alt="..."
-            style="width:100% ;">
+        <div class="container card"
+          style="width: auto;border: none;box-shadow: 10px 5px 10px 8px #DADADA;background: none;padding: 0%;margin: 0%;">
+          <img src="https://www.gyanvihar.org:3001/uploads/1609137484185o4.jpg" class="card-img-top"
+            alt="Holistic Growth" style="width: 346px;height: 346px;">
           <div class="card-body">
-            <p class="card-text" style="font-size: 20px;font-weight: 500;">Holistic Growth</p>
+            <p class="card-text" style="font-size: 20px;font-weight: 18rem;">Holistic Growth</p>
+            <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
           </div>
         </div>
         <div class="container card "
-          style="width: 20rem;border: none;box-shadow: 10px 12px 10px 8px #DADADA; background: none;">
+          style="width: 22rem;border: none;box-shadow: 10px 12px 10px 8px #DADADA; background: none;">
           <img src="https://www.gyanvihar.org:3001/uploads/16091374495794.1.jpg" class="card-img-top" alt="..."
-            style="width:100% ;">
+            style="width: 22rem;height: 346px;">
           <div class="card-body">
             <p class="card-title" style="font-size: 20px;font-weight: 500;">Industry Connect</p>
+            <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
           </div>
         </div>
 
