Added sub research

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
     <div class="row mb-0 mb-md-5" style="margin-top: 70px;">
       <p class="text-center">
 
-        <burtton class="btn btn-primary text-center" type="button"
+        <button class="btn btn-primary text-center" type="button"
           style="margin: 0px 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More gyan vihar
-          News</burtton>
+          News</button>
       </p>
     </div>
   </div>
@@ -300,8 +300,8 @@
     <div class="events-section bg-white" style="color: #254AA5;">
       <div class="container py-4 py-md-5">
         <div class="text-center mb-4 mb-md-5 section-heading">
-          <h3 style="font-size: 2.5rem;">Don't Miss out</h3>
-          <h2 style="font-size: 3.5rem;">Upcoming Events</h2>
+          <h1 style="font-size: 2.5rem;" class="miss">Don't Miss out</h1>
+          <h6 style="font-size: 3.5rem;" class="up-eve">Upcoming Events</h6>
         </div>
         <div class="py-5 py-5-custom"></div>
         <div class="timeline"></div>
@@ -309,6 +309,65 @@
       </div>
     </div>
   </div>
+  <div class="about-gyan-vihar" style="background-color: rgba(241, 241, 241,1);">
+    <div class="container py-5">
+      <h2 class="text-center section-heading" style="font-family: Source Sans Pro,sans-serif;">
+        About
+        Gyan Vihar</h2>
+      <div class="text-center home-para" style="font-size: 1.5rem;">Grooming leaders who
+        are not only through professionals but also good human beings with values
+      </div>
+    </div>
+    <!-- Row hr blocks  -->
+    <div class="row">
+      <div class="col-6 col-md-12">
+        <hr class="d-none d-md-block hr" style="border-width: 2px;border-color: black;">
+        <div class="row text-center">
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h3>80</h3>
+            <p> Years of education experience</p>
+          </div>
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h3>13</h3>
+            <p> Departments</p>
+          </div>
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h3>64</h3>
+            <p> Programs </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-md-12">
+        <hr class="d-none d-md-block hr">
+        <div class="row text-center">
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h3>250</h3>
+            <p> Faculty</p>
+          </div>
+          <div class="mt-4 mt-md-0 col-md-4 mb-4 mb-md-0">
+            <h3>10k +</h3>
+            <p> Alumni</p>
+          </div>
+          <div class="col-md-4 mb-4 mb-md-0">
+            <h3>8000</h3>
+            <p> Students</p>
+          </div>
+        </div>
+        <hr class=" d-md-block hr">
+      </div>
+    </div>
+    <p class="text-center">
+
+      <button class="btn btn-primary text-center" type="button"
+        style="margin: 3.5rem 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More About Gyan
+        Vihar</button>
+    </p>
+  </div>
+  <div class="container">
+    <div class="container"></div>
+    <h1>Hello</h1>
+  </div>
+
 
   <!-- jquery cdn -->
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
