--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <div class="Gyan-vihar-today" style="background-color: rgba(249, 246, 239,1); ">
     <div class="container py-md-5 py-4">
-      <h1 class="text-center section-heading"
+      <h1 class="text-center section-heading1"
         style="font-weight: 700;color: #254aa5;font-family: Source Sans Pro,sans-serif; font-weight: 900;">Gyan Vihar
         Today</h1>
       <div class="container container-fluid p-md-10"
@@ -264,7 +264,9 @@
         <h1 class="text-center section-heading"
           style="color: #254AA5;font-family: Source Sans Pro,sans-serif; font-weight: 1000;">why Gyan Vihar?</h1>
       </div>
+
       <!-- FEATURES CARDS -->
+
       <div class="row text-center features" style="padding-bottom: 40px;">
 
         <div class="container card"
@@ -272,8 +274,8 @@
           <img src="https://www.gyanvihar.org:3001/uploads/1609137971384o6.jpg" class="card-img" alt="..."
             style="width: 346px;height: 346px;">
           <div class="card-body">
-            <h6 class="card-text" style="font-size: 20px;font-weight: 700;">Diversified and global atmosphere</h6>
-            <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
+            <h6 class="card-text" style="font-size: 20px;font-weight: 18rem;">Diversified and global atmosphere</h6>
+            <p class="mt-1 show"><a href="Diversified and global atmosphere">show more</a></p>
           </div>
         </div>
         <div class="container card"
@@ -281,8 +283,8 @@
           <img src="https://www.gyanvihar.org:3001/uploads/1609137484185o4.jpg" class="card-img-top"
             alt="Holistic Growth" style="width: 346px;height: 346px;">
           <div class="card-body">
-            <p class="card-text" style="font-size: 20px;font-weight: 18rem;">Holistic Growth</p>
-            <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
+            <h6 class="card-text" style="font-size: 20px;font-weight: 18rem;">Holistic Growth</h6>
+            <p class="mt-1 show"><a href="Diversified and global atmosphere">show more</a></p>
           </div>
         </div>
         <div class="container card "
@@ -290,8 +292,8 @@
           <img src="https://www.gyanvihar.org:3001/uploads/16091374495794.1.jpg" class="card-img-top" alt="..."
             style="width: 22rem;height: 346px;">
           <div class="card-body">
-            <p class="card-title" style="font-size: 20px;font-weight: 500;">Industry Connect</p>
-            <p class="mt-1"><a href="Diversified and global atmosphere">show more</a></p>
+            <h6 class="card-title" style="font-size: 20px;font-weight: 18rem;">Industry Connect</h6>
+            <p class="mt-1 show"><a href="Diversified and global atmosphere">show more</a></p>
           </div>
         </div>
 
@@ -303,69 +305,119 @@
           <h1 style="font-size: 2.5rem;" class="miss">Don't Miss out</h1>
           <h6 style="font-size: 3.5rem;" class="up-eve">Upcoming Events</h6>
         </div>
-        <div class="py-5 py-5-custom"></div>
+        <div class="py-3 py-3-custom"></div>
         <div class="timeline"></div>
-        <p class="text-center mt-5"><a class="btn btn-style" href="/events">View More</a></p>
+        <p class="text-center">
+
+          <button class="btn btn-primary text-center" type="button"
+            style="margin: 0px 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">View
+            More</button>
+        </p>
       </div>
     </div>
   </div>
   <div class="about-gyan-vihar" style="background-color: rgba(241, 241, 241,1);">
     <div class="container py-5">
-      <h2 class="text-center section-heading" style="font-family: Source Sans Pro,sans-serif;">
+      <h2 class="text-center section-heading1" style="font-family: Source Sans Pro,sans-serif;">
         About
         Gyan Vihar</h2>
       <div class="text-center home-para" style="font-size: 1.5rem;">Grooming leaders who
         are not only through professionals but also good human beings with values
       </div>
-    </div>
-    <!-- Row hr blocks  -->
-    <div class="row">
-      <div class="col-6 col-md-12">
-        <hr class="d-none d-md-block hr" style="border-width: 2px;border-color: black;">
-        <div class="row text-center">
-          <div class="col-md-4 mb-4 mb-md-0">
-            <h3>80</h3>
-            <p> Years of education experience</p>
-          </div>
-          <div class="col-md-4 mb-4 mb-md-0">
-            <h3>13</h3>
-            <p> Departments</p>
-          </div>
-          <div class="col-md-4 mb-4 mb-md-0">
-            <h3>64</h3>
-            <p> Programs </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-6 col-md-12">
-        <hr class="d-none d-md-block hr">
-        <div class="row text-center">
-          <div class="col-md-4 mb-4 mb-md-0">
-            <h3>250</h3>
-            <p> Faculty</p>
-          </div>
-          <div class="mt-4 mt-md-0 col-md-4 mb-4 mb-md-0">
-            <h3>10k +</h3>
-            <p> Alumni</p>
-          </div>
-          <div class="col-md-4 mb-4 mb-md-0">
-            <h3>8000</h3>
-            <p> Students</p>
+      <!-- Row hr blocks  -->
+      <div class="row">
+        <div class="col-6 col-md-12">
+          <hr class="d-none d-md-block hr" style="border-width: 2px;border-color: black;">
+          <div class="row text-center">
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h3>80</h3>
+              <p> Years of education experience</p>
+            </div>
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h3>13</h3>
+              <p> Departments</p>
+            </div>
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h3>64</h3>
+              <p> Programs </p>
+            </div>
           </div>
         </div>
-        <hr class=" d-md-block hr">
+        <div class="col-6 col-md-12">
+          <hr class="d-none d-md-block hr">
+          <div class="row text-center">
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h3>250</h3>
+              <p> Faculty</p>
+            </div>
+            <div class="mt-4 mt-md-0 col-md-4 mb-4 mb-md-0">
+              <h3>10k +</h3>
+              <p> Alumni</p>
+            </div>
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h3>8000</h3>
+              <p> Students</p>
+            </div>
+          </div>
+          <hr class="d-none d-md-block hr">
+        </div>
       </div>
-    </div>
-    <p class="text-center">
+      <p class="text-center">
 
-      <button class="btn btn-primary text-center" type="button"
-        style="margin: 3.5rem 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More About Gyan
-        Vihar</button>
-    </p>
+        <button class="btn btn-primary text-center" type="button"
+          style="margin: 3.5rem 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More About
+          Gyan
+          Vihar</button>
+      </p>
+    </div>
   </div>
-  <div class="container">
-    <div class="container"></div>
-    <h1>Hello</h1>
+
+  <!-- Research section  -->
+
+  <div class="research-section">
+    <div class="container py-5">
+      <h2 class="text-center mb-4 mb-md-5 section-heading1">Gyan Vihar Research for a better world</h2>
+      <div class="row mb-3 mb-md-5">
+        <div class="col-md-4">
+          <div class="card mb-4 mb-md-0"><img class="card-img-top"
+              src="https://www.gyanvihar.org:3001/uploads/1609140982657o5.jpg">
+            <div class="card-body">
+              <h5 class="card-title"> </h5>
+              <p>Suresh Gyan Vihar University International Journal of Economics and Management</p>
+              <p class="mt-2 center-big show"><a href="Diversified and global atmosphere">show more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 mb-md-0"><img class="card-img-top"
+              src="https://www.gyanvihar.org:3001/uploads/1609141004560o3.jpg">
+            <div class="card-body">
+              <h5 class="card-title"> </h5>
+              <p>International Journal of Environment, Science and Technology</p>
+              <p class="mt-2 center-big show"><a href="Diversified and global atmosphere">show more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 mb-md-0"><img class="card-img-top"
+              src="https://www.gyanvihar.org:3001/uploads/1609141027783o7.jpg">
+            <div class="card-body">
+              <h5 class="card-title text-center"></h5>
+              <p>Journal of Pharmaceutical Research and Education</p>
+
+              <p class="mt-2 center-big show"><a href="Diversified and global atmosphere">show more</a></p>
+            </div>
+          </div>
+        </div>
+        <p class="text-center">
+
+          <button class="btn btn-primary text-center" type="button"
+            style="margin: 3.5rem 0px 40px 0px;background-color: #254AA5;font-weight: 700;font-size: 20px;">More About
+            Gyan
+            Vihar</button>
+        </p>
+      </div>
+    </div>
   </div>
 
 
