--- a/index.html
+++ b/index.html
@@ -59,13 +59,10 @@
       </div>
     </div>
 
-  </nav>
-  <!-- Main navbar -->
+    <!-- Main navbar -->
 
 
-  <nav class="navbar navbar-expand-lg bg-white sticky-top">
-
-    <div class="container-fluid">
+    <div class="container-fluid navbar navbar-expand-lg bg-white sticky-top">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -100,7 +97,8 @@
             <a class="nav-link active" aria-current="page" href="#">About us</a>
           </li>
         </ul>
-        <a href="./Assests/apply-now.html" class="btn btn-primary border-2" role="button" target="_blank">APPLY NOW</a>
+        <a href="./Assests/apply-now.html" class="btn btn-primary border-2" role="button" target="_blank">APPLY
+          NOW</a>
 
       </div>
     </div>
@@ -418,6 +416,11 @@
         </p>
       </div>
     </div>
+  </div>
+
+  <!-- Research Info -->
+  <div style="background-color:#DADADA ;">
+    <div class="container py-5"></div>
   </div>
 
 
