--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style/style.css" />
-  <link rel="stylesheet" href="./OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" href="./style/main.42ae7270.chunk.css">
+  <link rel="stylesheet" href="./OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="./OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -466,6 +469,59 @@
     </div>
   </div>
 
+  <!-- Campus Life -->
+
+  <div class="campus-section">
+    <div class="container py-5">
+      <h2 class="text-center  mb-4 mb-md-5 section-heading">Campus Life</h2>
+      <div class="row">
+        <div class="col-md-6 col-lg-4"><img class="card-img"
+            src="https://www.gyanvihar.org:3001/uploads/1609137311665sports_campus_life1.jpg">
+          <div class="card text-center mb-4 mb-md-0">
+            <div class="card-body">
+              <h5 class="card-title">Sports and Fitness</h5>
+              <p>
+              <div>In the modern era fitness is the utmost requirement of every individual. On the other hand, sports
+                transform us into a team player and a strong individual both physically and mentally. Sports tournaments
+                teach us oneness and representation of Suresh Gyan Vihar University.</div>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4"><img class="card-img-top mx-auto"
+            src="https://www.gyanvihar.org:3001/uploads/1609137319883o12.jpg">
+          <div class="card text-center mb-4 mb-md-0">
+            <div class="card-body">
+              <h5 class="card-title">World Class Infrastructure</h5>
+              <p>
+              <div>Suresh Gyan Vihar University is brimming with the lush green natural charm of nature which offers a
+                comforting environment. We have set the benchmark standards high when it comes to striking the perfect
+                balance between nature and nurture. Our building and facilities along with auditorium are constructed on
+                international standards.</div>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mx-auto mt-md-4 mt-lg-0"><img class="card-img-top mx-auto"
+            src="https://www.gyanvihar.org:3001/uploads/1609132177579cafeteria_campus_life.jpg">
+          <div class="card text-center mb-4 mb-md-0">
+            <div class="card-body">
+              <h5 class="card-title">Cafeteria</h5>
+              <p>
+              <div>When it comes to the cafeteria is not just for fun and food, but it is a center for learning and
+                meeting for scholars. On the other hand, there are a variety of food items to choose from according to
+                their taste preference. The cafeteria is very spacious for the accommodation of a large number of
+                scholars.</div>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center" style="padding-top: 25px;"><a class="btn btn-warning btn-lg" href="/campuslife">More
+          About Campus Life</a></div>
+    </div>
+  </div>
+
   <!-- Testimonial section  -->
 
   <div class="testimonial-section">
@@ -691,6 +747,16 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- Admission section  -->
+  <div class="container addmission text-center mt-3">
+    <div class="section-heading1">
+      Addmissions
+    </div>
+    <div class="text-center home-para" style="font-size: 1.5rem;">Knowledge Creation And Research Immerse in research
+      and invent the future
     </div>
   </div>
 
